fix overflow scrolling

--- a/index.css
+++ b/index.css
@@ -39,10 +39,6 @@ body {
     flex-direction: column;
 }
 
-#assembly-headshots {
-    overflow: hidden;
-}
-
 .header {
     display: flex;
 }
